--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,14 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-   path: ^1.8.0
-   dartle: 0.22.2
-   logging: ^1.1.1
+  path: ^1.8.0
+  dartle: 0.22.2
+  logging: ^1.1.1
+  yaml: ^3.1.2
 
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.21.0
+
+executables:
+  dc: dc.dart
