Try to fix tests on GH Actions.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,10 @@ name: DartleC Build
 
 on: [push]
 
+permissions:
+  statuses: write
+  checks: write
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
