--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,11 @@ jobs:
           sdk: ${{ matrix.sdk }}
       - name: Install dependencies
         run: dart pub get
+      - name: Install C Compiler on Windows
+        if: runner.os == 'Windows'
+        run: choco install llvm
       - name: Build
+        shell: bash
         run: dart dartle.dart
       - name: Test Report
         uses: dorny/test-reporter@v1
