--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install C Compiler on Windows
         if: runner.os == 'Windows'
         run: choco install llvm
+      - name: Initialize C Compiler on Windows
+        if: runner.os == 'Windows'
+        run: clang --version
       - name: Build
         shell: bash
         run: dart dartle.dart
