Minor test fixes.

--- a/test/single_hfile_example/dcc.yaml
+++ b/test/single_hfile_example/dcc.yaml
@@ -1,5 +1,5 @@
 source-dirs: [ lib ]
 compiler-args: [ "-std=c99", "-Wall", "-Wextra", "-Werror", "-ansi", "-pedantic",
                  "-Werror-implicit-function-declaration", "-Wmissing-prototypes" ]
-linker-args: [ "-shared" ]
+linker-args: [ "-shared", "-fPIC" ]
 output: out/libmylib.so
