--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        sdk: [stable]
+        os: [ macos-latest ] # [ubuntu-latest, macos-latest, windows-latest]
+        sdk: [ stable ]
     steps:
       - uses: actions/checkout@v3
       - uses: dart-lang/setup-dart@v1.0
