--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ macos-latest ] # [ubuntu-latest, macos-latest, windows-latest]
+        os: [ windows-latest ] # [ubuntu-latest, macos-latest, windows-latest]
         sdk: [ stable ]
     steps:
       - uses: actions/checkout@v3
